<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.cat.black.justjava.MainActivity"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:src="@drawable/bg_test"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_horizontal_margin"
        android:orientation="vertical">

        <EditText
            android:id="@+id/enter_name"
            android:hint="@string/name_hint"
            android:textColorHint="@color/carmel_coffee"
            android:textColor="@color/colorAccent"
            android:background="@color/bg_cream"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:padding="@dimen/enter_name_padding"
            android:inputType="textPersonName|textCapWords"/>

        <TextView
            android:text="@string/head_quantity"
            android:textAllCaps="true"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:src="@drawable/button_mins3"
                android:layout_width="@dimen/quant_button_width"
                android:layout_height="@dimen/quant_button_height"
                android:layout_marginRight="@dimen/quant_button_spacing"
                android:background="@color/bg_zero"
                android:scaleType="centerInside"
                android:onClick="decrement"/>

            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@color/bg_ice"
                android:padding="@dimen/text_spacing"
                android:text="1"
                android:textColor="@color/cacao_coffee"
                android:textSize="@dimen/text_size" />

            <ImageButton
                android:src="@drawable/button_plus3"
                android:layout_width="@dimen/quant_button_width"
                android:layout_height="@dimen/quant_button_height"
                android:layout_marginLeft="@dimen/quant_button_spacing"
                android:background="@color/bg_zero"
                android:scaleType="centerInside"
                android:onClick="increment"/>

        </LinearLayout>

        <TextView
            android:text="@string/head_topping"
            android:textAllCaps="true"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"/>

        <CheckBox
            android:id="@+id/topping_whipped_cream"
            android:text="@string/cream"
            android:textSize="@dimen/text_size"
            android:textColor="@color/colorAccent"
            android:buttonTint="@color/colorAccent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/topping_padding"
            android:onClick="onCheckboxChecked"/>

        <CheckBox
            android:id="@+id/topping_pepsi"
            android:text="@string/pepsi"
            android:textSize="@dimen/text_size"
            android:textColor="@color/colorAccent"
            android:buttonTint="@color/colorAccent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/topping_padding"
            android:onClick="onCheckboxChecked"/>

        <CheckBox
            android:id="@+id/topping_chockolate"
            android:text="@string/chocko"
            android:textSize="@dimen/text_size"
            android:textColor="@color/colorAccent"
            android:buttonTint="@color/colorAccent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/topping_padding"
            android:onClick="onCheckboxChecked"/>

        <TextView
            android:text="@string/head_summary"
            android:textAllCaps="true"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"/>

        <TextView
            android:id="@+id/order_summary_text_view"
            android:text="@string/hint_summary"
            android:textColor="@color/cacao_coffee"
            android:textSize="@dimen/text_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/bg_ice"
            android:padding="@dimen/text_spacing"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:src="@drawable/button_check4"
                android:layout_width="@dimen/action_button_width"
                android:layout_height="@dimen/action_button_height"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:background="@color/bg_zero"
                android:scaleType="centerInside"
                android:onClick="showOrder"/>

            <ImageButton
                android:src="@drawable/button_send4"
                android:layout_width="@dimen/action_button_width"
                android:layout_height="@dimen/action_button_height"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:background="@color/bg_zero"
                android:scaleType="centerInside"
                android:onClick="sendOrder"/>

        </LinearLayout>

    </LinearLayout>
    </ScrollView>
</RelativeLayout>